prod-ingress-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-demo-app
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: prod.demo-app.158.160.206.202.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-demo-app
            port:
              number: 8080
